welcome.lessons.welcome.bat.bool2.SquirrelPlay.scala.error
squirrelPlay:2: error: not found: value iSummer
  if (temp>=60 && temp<=90 && !iSummer){
                               ^squirrelPlay:4: error: not found: value iSummer
  } else if (temp>=60 && temp<=100 && iSummer){
                                      ^